syntax = "proto3";

option go_package = "renderService/layer";

package layer;

//EVENT adalah objek event
service EventLayer {
    rpc Get(Pagination) returns (EventList); //untuk melihat semua event tersedia
    rpc GetByID(IDPayload) returns (Event); //untuk melihat hanya satu event via ID
    rpc Edit(EventEditPayload) returns (Empty); //edit event
    rpc Create(Event) returns (Empty); //create event
    rpc Delete(IDPayload) returns (Empty); //delete event
}

//Participant adalah objek dari sebuah user yang ikut event
service ParticipantLayer {
    rpc Get(Pagination) returns (ParticipantList); //untuk melihat participant event oleh publisher
    rpc TagByID(TagParticipantPayload) returns (Empty); //untuk ganti status
    rpc Delete(IDPayload) returns (Empty); //remove participant
}

//Registration adalah objek dari formulir registrasi untuk event
service RegisterLayer {
    rpc Create(Register) returns (Empty); //membuat register oleh calon participant event
    rpc GetByID(IDPayload) returns (Register); //melihat register by ID, diperlukan oleh publisher
    rpc Delete(IDPayload) returns (Empty); //remove register
    rpc Get(Pagination) returns (RegisterList); //melihat register, diperlukan publisher
}

//Subscription
service SubscriptionLayer {
    rpc Create(Subscription) returns (Empty); //membuat subscription untuk publisher (user yang menciptakan event)
    rpc Get(Pagination) returns (SubscriptionList); //melihat subscription, diperlukan oleh broadcastService dan user
    rpc Delete(IDPayload) returns (Empty); //menghapus subscription, diperlukan oleh consumer (user yang subscribe publisher)
    rpc GetByID(IDPayload) returns (Subscription); //mendapatkan subscription by id, diperlukan untuk auth
}

//Payment
service PaymentLayer {
    rpc GetByID(IDPayload) returns (Payment); //melihat payment, diperlukan oleh consumer
    rpc GetByUserID(IDPayload) returns (PaymentList); //melihat payment, diperlukan oleh publisher
    rpc Create(Payment) returns (Empty); //membuat payment, diperlukan oleh publisher
    rpc Delete(Payment) returns (Empty); //menghapus payment, diperlukan oleh publisher
}

//Certificate
service CertificateLayer {
    rpc Create(Certificate) returns (Empty); //membuat certificate, diperlukan oleh fileService
    rpc Get(Pagination) returns (CertificateList); //melihat certificate, diperlukan oleh consumer
}

//USER
service UserLayer {
    rpc GetByEmail(EmailPayload) returns (User); //untuk signin
    rpc GetByID(IDPayload) returns (User); //untuk setting user
    rpc Create(User) returns (Empty); //signup
    rpc Edit(UserEditPayload) returns (Empty); //edit user
}

//Like
service LikeLayer{
    rpc Get(Pagination) returns (LikeList); //melihat like, diperlukan oleh broadcastService, consumer dan publisher
    rpc Create(Like) returns (Empty); //membuat like, diperlukan oleh consumer
    rpc Delete(IDPayload) returns (Empty); //menghapus like, diperlukan oleh consumer
    rpc GetByID(IDPayload) returns (Like); //mendapat 1 like, diperlukan untuk auth
}

message Like {
    optional uint32 ID = 1;
    optional uint32 user_ID = 2;
    optional uint32 event_ID = 3;
}

message LikeList{
    repeated Like list = 1;
}

message IDPayload{
    optional uint32 ID = 1;
}

message Empty{

}

message EmailPayload{
    optional string email = 1;
}

message Pagination{
    optional uint32 lastID = 1;
    optional uint32 limit = 2;
    optional string query = 3;
}

message UserEditPayload{
    repeated string select = 1;
    User user = 2;
    optional uint32 ID = 3;
}

message EventEditPayload{
    repeated string select = 1;
    Event event = 2;
    optional uint32 ID = 3;
}

message Event{
    optional uint32 ID = 1;
    optional string name = 2;
    optional string description = 3;
    optional string event_img = 4;
    optional string password = 5;
    optional string requirement = 6;
    optional bool need_payment = 7;
    optional bool need_ID = 8;
    optional uint32 payment_ID = 9;
    optional uint32 publisher_ID = 10;
    optional double payment_price = 11;
    optional EventCategory event_category = 12;
    optional bool is_offline = 13;
    optional string location_address = 14;
    optional string location_city = 15;
    optional string location_province = 16;
    optional string start_date = 17;
    optional string finish_date = 18;
    optional EventStatus status = 19;
    optional string presence_question = 20;
    optional string media_link = 21;
    optional string created_at = 22;
    optional string updated_at = 23;
}

enum EventCategory {
    E_OTHER = 0;
    E_MUSIC = 1;
    E_HOBBIES = 2;
    E_PERFORMING_AND_VISUAL_ARTS = 3;
    E_EDUCATION = 4;
    E_HEALTH = 5;
    E_TRAVEL_AND_OUTDOOR = 6;
    E_FOOD_AND_DRINK = 7;
    E_SPORTS_AND_FITNESS = 8;
    E_BUSSINESS = 9;
}

enum EventStatus {
    E_UNSPECIFIED = 0;
    E_OPEN_FOR_REG = 1;
    E_CLOSE_FOR_REG = 2;
    E_ON_GOING = 3;
    E_FINISH = 4;
}

message EventList{
    repeated Event list = 1;
}

message Participant{
    optional uint32 ID = 1;
    optional string name = 2;
    optional string description = 3;
    optional string profile_img = 4;
    optional string created_at = 5;
    optional string updated_at = 6;
    optional string email = 7;
    optional uint32 register_ID = 8;
    optional ParticipantStatus status = 9;
    optional uint32 certificate_ID = 10;
    optional uint32 event_ID = 11;
    optional uint32 user_ID = 12;
}

message TagParticipantPayload{
    optional uint32 ID = 1;
    ParticipantStatus status = 2;
}

enum ParticipantStatus {
    P_UNSPECIFIED = 0;
    P_REG_WAIT = 1; //mengisi formulir pendaftaran menunggu konfirmasi
    P_REG_ACCEPT = 2; //formulir pendaftaran diterima
    P_REG_REJECT = 3; //formulir pendaftaran ditolak
    P_PRESENCE_WAIT = 4; //mengisi formulir absen menunggu konfirmasi
    P_PRESENCE_ACCEPT = 5; //formulir absen diterima
    P_PRESENCE_REJECT = 6; //formulir absen ditolak
}

message ParticipantList{
    repeated Participant list = 1;
}

message Register{
    optional uint32 ID = 1;
    optional uint32 User_ID = 2;
    optional uint32 Event_ID = 3;
    optional string requirement = 4;
    optional string payment_img = 5;
    optional string ID_img = 6; 
    optional string created_at = 7;
}

message RegisterList{
    repeated Register list = 1;
}

message Subscription{
    optional uint32 ID = 1;
    optional uint32 publisher_ID = 2;
    optional uint32 consumer_ID = 3;
}

message SubscriptionList{
    repeated Subscription list = 1;
}

message Payment{
    optional uint32 ID = 1;
    optional string name = 2;
    optional string detail = 3;
    optional uint32 user_ID = 4;
}

message PaymentList{
    repeated Payment list = 1;
}

message CertificateList{
    repeated Certificate list = 1;
}

message Certificate{
    optional uint32 ID = 1;
    optional string file_url = 2;
    optional uint32 event_ID = 3;
    optional uint32 user_ID = 4;
}

message User{
    optional uint32 ID = 1;
    optional string name = 2;
    optional string description = 3;
    optional string profile_img = 4;
    optional string created_at = 5;
    optional string updated_at = 6;
    optional string email = 7;
    optional string password = 8;
}

message UserList{
    repeated User list = 1;
}